; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if.c_if_register_com_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if.c_if_register_com_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@if_com_alloc = common dso_local global i32** null, align 8
@.str = private unnamed_addr constant [45 x i8] c"if_register_com_alloc: %d already registered\00", align 1
@if_com_free = common dso_local global i32** null, align 8
@.str.1 = private unnamed_addr constant [50 x i8] c"if_register_com_alloc: %d free already registered\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @if_register_com_alloc(i64 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32**, i32*** @if_com_alloc, align 8
  %8 = load i64, i64* %4, align 8
  %9 = getelementptr inbounds i32*, i32** %7, i64 %8
  %10 = load i32*, i32** %9, align 8
  %11 = icmp eq i32* %10, null
  %12 = zext i1 %11 to i32
  %13 = load i64, i64* %4, align 8
  %14 = inttoptr i64 %13 to i8*
  %15 = call i32 @KASSERT(i32 %12, i8* %14)
  %16 = load i32**, i32*** @if_com_free, align 8
  %17 = load i64, i64* %4, align 8
  %18 = getelementptr inbounds i32*, i32** %16, i64 %17
  %19 = load i32*, i32** %18, align 8
  %20 = icmp eq i32* %19, null
  %21 = zext i1 %20 to i32
  %22 = load i64, i64* %4, align 8
  %23 = inttoptr i64 %22 to i8*
  %24 = call i32 @KASSERT(i32 %21, i8* %23)
  %25 = load i32*, i32** %5, align 8
  %26 = load i32**, i32*** @if_com_alloc, align 8
  %27 = load i64, i64* %4, align 8
  %28 = getelementptr inbounds i32*, i32** %26, i64 %27
  store i32* %25, i32** %28, align 8
  %29 = load i32*, i32** %6, align 8
  %30 = load i32**, i32*** @if_com_free, align 8
  %31 = load i64, i64* %4, align 8
  %32 = getelementptr inbounds i32*, i32** %30, i64 %31
  store i32* %29, i32** %32, align 8
  ret void
}

declare dso_local i32 @KASSERT(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
